added pdf upload and fixed chat and video call